--- a/app/src/main/res/layout/bufferlist.xml
+++ b/app/src/main/res/layout/bufferlist.xml
@@ -4,6 +4,12 @@
     android:layout_height="fill_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto" >
 
+    <View
+        android:id="@+id/navigation_padding"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_alignParentBottom="true"
+        android:visibility="gone" />
 
     <RelativeLayout
         android:id="@+id/filter_bar"
