put synchronization settings into their own preference screen

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -121,6 +121,39 @@
                     android:persistent="false"
                     android:selectable="false" />
             </PreferenceScreen>
+
+            <PreferenceScreen
+                android:key="connection_synchronization_settings"
+                android:title="Synchronization settings">
+                <CheckBoxPreference
+                    android:key="optimize_traffic"
+                    android:title="@string/pref__connection__only_sync_open_buffers"
+                    android:summary="@string/pref__connection__only_sync_open_buffers_summary"
+                    android:defaultValue="false" />
+                <CheckBoxPreference
+                    android:key="hotlist_sync"
+                    android:title="@string/pref__connection__sync_read_status"
+                    android:summary="@string/pref__connection__sync_read_status_summary"
+                    android:defaultValue="false" />
+                <EditTextPreferenceFix
+                    android:key="line_increment"
+                    android:title="Number of lines to fetch"
+                    android:summary="The number of lines requested when opening a buffer or when you press the “Load more lines” button (%s)"
+                    android:defaultValue="300"
+                    android:inputType="number" />
+                <EditTextPreferenceFix
+                    android:key="line_number_to_request_when_starting_search"
+                    android:title="Number of lines to fetch for search"
+                    android:summary="When starting a new search, unless already fetched, the app will request up to this many lines from WeeChat (%s)"
+                    android:defaultValue="4097"
+                    android:inputType="number" />
+                <HelpPreference
+                    android:summary="Note that due to filtering the number of lines actually shown might
+                    be less than the number of loaded lines. Also note that due to WeeChat’s limitations
+                    the app has to re-fetch all lines every times it requests more lines."
+                    android:persistent="false"
+                    android:selectable="false" />
+            </PreferenceScreen>
         </PreferenceCategory>
 
         <PreferenceCategory
@@ -133,34 +166,6 @@
             <CheckBoxPreference
                 android:key="boot_connect"
                 android:title="@string/pref__connection__connect_on_boot" />
-            <EditTextPreferenceFix
-                android:key="line_increment"
-                android:title="Number of lines to fetch"
-                android:summary="The number of lines requested when opening a buffer or pressing the “Load more lines” button (%s)"
-                android:defaultValue="300"
-                android:inputType="number" />
-            <EditTextPreferenceFix
-                android:key="line_number_to_request_when_starting_search"
-                android:title="Number of lines to fetch for search"
-                android:summary="When starting a new search, unless already fetched, the app will request up to this many lines from WeeChat (%s)"
-                android:defaultValue="4097"
-                android:inputType="number" />
-            <HelpPreference
-                android:summary="Note that due to filtering the number of lines actually shown might
-                be less than the number of loaded lines. Also note that due to WeeChat’s limitations
-                the app has to re-fetch all lines every times it requests more lines."
-                android:persistent="false"
-                android:selectable="false" />
-            <CheckBoxPreference
-                android:key="optimize_traffic"
-                android:title="@string/pref__connection__only_sync_open_buffers"
-                android:summary="@string/pref__connection__only_sync_open_buffers_summary"
-                android:defaultValue="false" />
-            <CheckBoxPreference
-                android:key="hotlist_sync"
-                android:title="@string/pref__connection__sync_read_status"
-                android:summary="@string/pref__connection__sync_read_status_summary"
-                android:defaultValue="false" />
 
             <PreferenceScreen
                 android:key="ping_group"
