view bindings: add for buffer list & share text activity

--- a/app/src/main/res/layout-large-land/main_screen.xml
+++ b/app/src/main/res/layout-large-land/main_screen.xml
@@ -2,7 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/not_drawer_layout"
+    android:id="@+id/main_screen_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@null"
