--- a/app/src/main/res/layout/weasel.xml
+++ b/app/src/main/res/layout/weasel.xml
@@ -18,12 +18,12 @@
 
     <!-- has transparent background. frames get to color themselves -->
     <com.ubergeek42.WeechatAndroid.utils.WeaselMeasuringViewPager
-        android:id="@+id/main_viewpager"
+        android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
     <!-- used to draw background on api 27+ -->
-    <View android:id="@+id/navigation_padding_right"
+    <View android:id="@+id/navigation_padding"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_gravity="bottom"
