--- a/app/src/main/res/layout/certificate_dialog_certificate.xml
+++ b/app/src/main/res/layout/certificate_dialog_certificate.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+
+    tools:viewBindingIgnore="true">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
